# YOLOv8-MNN

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/detect/: CMakeLists.txt  detect_demo.cc  image_fusion.cpp
input/: model.mnn
src/: CMakeLists.txt  mnn_inference.cc  mnn_inference.h  util.cc  util.h
src/3party/: CMakeLists.txt
src/3party/mnn/: CMakeLists.txt
src/3party/mnn/android/include/MNN/: Tensor.hpp
src/3party/mnn/linux/armv7l/include/MNN/: Interpreter.hpp  MNNDefine.h  Platform.h  Tensor.hpp
src/3party/mnn/linux/armv7l/include/MNN/expr/: Executor.hpp
src/3party/mnn/win64/lib/debug/: MNN_D.lib
src/3party/mnn/win64/lib/release/: MNN.lib
